<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    android:background="@drawable/pop_up_img"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/create_tag"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/tags_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_border_edit_text"
        android:ems="15"
        android:gravity="start|top"
        android:hint="@string/tag_hint"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:elevation="6dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_action"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/add_action"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>