<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="taggedit.com.teggedit.activity.SettingsActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/tag_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:elevation="6dp"
        card_view:cardCornerRadius="4dp">

        <TextView
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/tags"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/intro_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:elevation="6dp"
        card_view:cardCornerRadius="4dp">

        <TextView
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/intro"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:elevation="6dp"
        card_view:cardCornerRadius="4dp">

        <TextView
            style="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/app_version"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/app_version_code"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/app_version"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/feedback_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:elevation="6dp"
        card_view:cardCornerRadius="4dp">

        <TextView
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/feedback"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>

</LinearLayout>

