<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            app:elevation="0dp"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleTextColor="@color/offWhite">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/tag_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:elevation="6dp"
            card_view:cardCornerRadius="4dp">

            <TextView
                style="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/tags"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/intro_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:elevation="6dp"
            card_view:cardCornerRadius="4dp">

            <TextView
                style="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/intro"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:elevation="6dp"
            card_view:cardCornerRadius="4dp">

            <TextView
                style="?android:textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/app_version"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/app_version_code"
                style="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/app_version"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/feedback_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:elevation="6dp"
            card_view:cardCornerRadius="4dp">

            <TextView
                style="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/feedback"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>